# autora-theorist-nuts

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
challenge/: theorist_benchmarking.ipynb
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/theorist/nuts/: __init__.py  audit.py  config.py  constraints.py  fitness.py  format.py  numeric.py  pset.py  test_fitness  test_tree_translate.py  theorist.py  tree.py
src/autora/theorist/nuts/genetic/: crossover.py  evolve.py  mutation.py  selection.py
tests/: test_nuts.py
