[project]
# UPDATE THIS BEFORE PUBLISHING
name = "nuts"
description = "an equation discovery methode"
authors = [{ name = "Periklis Maskanakis", email = "periklismaskanakis@gmail.com" }]
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
    "autora",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]",
    "autora"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/Edogor/autora-theorist-nuts"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

